<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <Button
        android:id="@+id/button_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/text_create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yellow_ellipse"
        app:layout_constraintVertical_bias="0.19999999" />

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/hint_edit_title"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/hint_edit_description"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitle" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_priority"
        app:layout_constraintBottom_toTopOf="@+id/red_ellipse"
        app:layout_constraintStart_toStartOf="@+id/editTextDescription"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />

    <View
        android:id="@+id/green_ellipse"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="49dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/elipse"
        android:backgroundTint="@color/greenEllipse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/yellow_ellipse"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/red_ellipse"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/elipse"
        android:backgroundTint="@color/redEllipse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/yellow_ellipse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/yellow_ellipse"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/elipse"
        android:backgroundTint="@color/yellowElliple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/green_ellipse"
        app:layout_constraintStart_toEndOf="@+id/red_ellipse"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/red_vector_check"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:background="@drawable/tick"
        app:layout_constraintBottom_toBottomOf="@+id/red_ellipse"
        app:layout_constraintEnd_toEndOf="@+id/red_ellipse"
        app:layout_constraintStart_toStartOf="@+id/red_ellipse"
        app:layout_constraintTop_toTopOf="@+id/red_ellipse"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/yellow_vector_check"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:background="@drawable/tick"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/yellow_ellipse"
        app:layout_constraintEnd_toEndOf="@+id/yellow_ellipse"
        app:layout_constraintStart_toStartOf="@+id/yellow_ellipse"
        app:layout_constraintTop_toTopOf="@+id/yellow_ellipse"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/green_vector_check"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/tick"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/green_ellipse"
        app:layout_constraintEnd_toEndOf="@+id/green_ellipse"
        app:layout_constraintStart_toStartOf="@+id/green_ellipse"
        app:layout_constraintTop_toTopOf="@+id/green_ellipse"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>